<resources>
    <string name="app_name">Gudang SBUTK</string>
    <string name="title_home">Home</string>
    <string name="title_form">Form</string>
    <string name="title_data">Data</string>
    <string name="title_settings">Settings</string>
    <string name="jenis_barang">Jenis Barang</string>
    <string name="add_barang">Tambah Barang</string>
    <string name="kode_barang">Kode Jenis Barang</string>
    <string name="nama_barang">Nama Jenis Barang</string>
    <string name="simpan">Simpan Data</string>
    <string name="keterangan_tambahan">Keterangan Tambahan</string>
    <string name="delete">Hapus</string>
    <string name="delete_barang">Hapus data barang ini ?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="name">Nama</string>
    <string name="hai_user">Hi, %s</string>
    <string name="tanggal">Senin, 01 Januari 2021</string>
    <string name="calender">Calender</string>
    <string name="pengambilan_barang">Pengambilan Barang Hari Ini</string>
    <string name="data_saya">Data Saya</string>
    <string name="data_all">Semua Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_pengambilan_barang">Data Pengambilan Barang</string>
    <string name="form_pengambilan_barang">Form Pengambilan Barang</string>
    <string name="sales">Nama Sales</string>
    <string name="jumlah">Jumlah Barang</string>
    <string name="pilih_barang">Pilih Barang</string>
    <string name="pilih_satuan">Satuan</string>
    <string name="choose_photo">Pilih Foto Barang</string>
    <string name="choose_image">Pilih Foto Barang</string>
    <string name="warning_image">Silahkan pilih foto barang terlebih dahulu !</string>
    <string name="added_time">Added Time</string>
    <string name="riwayat_pengambilan_barang">Riwayat Pengambilan Barang</string>
    <string name="download_pdf">Download PDF</string>
    <string name="export_excel">Export Excel</string>
    <string name="csv_file_generated_text">File Excel berhasil dibuat</string>
    <string name="csv_file_not_generated_text">Gagal memuat File Excel !</string>
    <string name="export_pdf">Export PDF</string>
    <string name="kayu_aro">Kayu Aro</string>
    <string name="gudang">Gudang</string>
    <string name="sbutk">SBUTK</string>
    <string name="dots"> : </string>
    <string name="tanggal_pengambilan">Tanggal</string>
    <string name="keterangan">Keterangan</string>
    <string name="kode">Kode Barang</string>
    <string name="nama">Nama Barang</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_item">Tambah Item</string>
    <string name="catatan">Catatan</string>
    <string name="daftar_item">Daftar Item Barang</string>
    <string name="id">id : -----</string>
    <string name="message">Pesan Alert</string>
    <string name="jumlah_item">Jumlah Item</string>
    <string name="no_form">No Form : -----</string>
    <string name="nomor">No</string>
    <string name="nama_user">Nama User</string>
    <string name="email_user">gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="information">Information</string>
    <string name="help">Help Center</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="delete_alert">Hapus data pengambilan barang no %s ?</string>
    <string name="sbu">Sub Bagian Unit Teh Kemasan</string>
    <string name="ptpn">PT Perkebunan Nusantara VI</string>
    <string name="app_version">App version :  1.0.0</string>
    <string name="copyright">Copyright &#xA9; 2021</string>
    <string name="created_by">Developed by : musfiroh.desi@gmail.com</string>
</resources>