<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_form"
        android:icon="@drawable/ic_form"
        android:title="@string/title_form"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_data"
        android:title="@string/title_data"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:cnb_iconColor="@color/primary"/>
</menu>