<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_bottom">

    <TextView
        style="@style/Text.Regular"
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:text="@string/no_form"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginBottom="4dp"/>

    <TextView
        style="@style/Text.Small"
        android:id="@+id/tv_added_time"
        android:layout_width="wrap_content"
        android:text="@string/added_time"
        android:layout_gravity="end"
        android:layout_marginBottom="4dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/Text.Regular"
                android:layout_width="110dp"
                android:text="@string/sales"
                android:textStyle="bold" />

            <TextView
                style="@style/Text.Regular"
                android:layout_width="20dp"
                android:text="@string/dots" />

            <TextView
                style="@style/Text.Regular"
                android:id="@+id/tv_sales"
                android:text="@string/sales" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/Text.Regular"
                android:layout_width="110dp"
                android:text="@string/tanggal_pengambilan"
                android:textStyle="bold" />

            <TextView
                style="@style/Text.Regular"
                android:layout_width="20dp"
                android:text="@string/dots" />

            <TextView
                style="@style/Text.Regular"
                android:id="@+id/tv_tanggal"
                android:text="@string/tanggal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/Text.Regular"
                android:layout_width="110dp"
                android:text="@string/keterangan"
                android:textStyle="bold" />

            <TextView
                style="@style/Text.Regular"
                android:layout_width="20dp"
                android:text="@string/dots" />

            <TextView
                style="@style/Text.Regular"
                android:id="@+id/tv_keterangan"
                android:text="@string/keterangan_tambahan" />
        </TableRow>
    </TableLayout>

    <TextView
        style="@style/Text.Regular"
        android:layout_width="wrap_content"
        android:text="@string/daftar_item"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_dialog_data"
        android:layout_marginTop="8dp"/>
</LinearLayout>


