<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.barang.AddBarangActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <TextView
                style="@style/Text.Regular"
                android:text="@string/kode_barang"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1"/>

            <TextView
                style="@style/Text.Regular"
                android:text="@string/nama_barang"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

            <TextView
                style="@style/Text.Regular"
                android:text="@string/keterangan"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Text.Regular"
                android:id="@+id/btn_choose_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/choose_image" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_image"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/bg_input"
                android:layout_margin="10dp"
                android:visibility="gone"/>

            <TextView
                style="@style/Text.Regular"
                android:id="@+id/warning_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning_image"
                android:visibility="gone"
                android:textColor="@color/red"/>

            <Button
                style="@style/Button"
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:text="@string/simpan"
                android:layout_marginVertical="20dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
