<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/pengaturan"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </FrameLayout>

    <TextView
        style="@style/Text.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_barang" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_barang" />

    <Button
        style="@style/Button"
        android:id="@+id/btn_add_barang"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add_barang"
        android:layout_margin="20dp"
        android:padding="8dp"/>

</LinearLayout>