<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_marginBottom="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/tv_no"
            style="@style/Text.Regular"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/nomor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_barang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_barang"
            style="@style/Text.Regular"
            android:layout_width="0dp"
            android:layout_marginEnd="10dp"
            android:text="@string/nama_barang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_jumlah"
            app:layout_constraintStart_toEndOf="@+id/tv_no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_jumlah"
            style="@style/Text.Regular"
            android:layout_width="0dp"
            android:text="@string/jumlah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>