<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.FormFragment">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/form_pengambilan_barang"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="end">

                <TextView
                    style="@style/Text.Medium"
                    android:id="@+id/tv_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"/>

                <ImageButton
                    android:id="@+id/btn_tanggal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_calender"
                    android:scaleType="center"
                    android:background="@drawable/bg_button"
                    android:contentDescription="@string/calender" />
            </LinearLayout>

            <TextView
                style="@style/Text.Regular"
                android:text="@string/sales"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sales"
                style="@style/Text.Medium"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:background="@drawable/bg_input"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Regular"
                android:text="@string/keterangan_tambahan"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_keterangan"
                style="@style/Text.Medium"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:background="@drawable/bg_input"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                style="@style/Text.Regular"
                android:text="@string/daftar_item"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="16dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_form"/>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp">

                <Button
                    style="@style/Button"
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tambah_item"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_submit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    style="@style/Button"
                    android:id="@+id/btn_submit"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/simpan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_add"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>